--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
+    "@types/better-sqlite3": "^7.6.5",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
-    "@types/better-sqlite3": "^7.6.5",
+    "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.4.0",
     "vite": "^5.0.0"
   }
