--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,12 @@
     "dev": "node index.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^9.4.3",
+    "connect-sqlite3": "^0.9.16",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "puppeteer": "^22.6.3"
   }
 }
